added:  quality and interests sections

--- a/index.html
+++ b/index.html
@@ -35,5 +35,116 @@
          </div>   
         </div>
     </main>
+    <div class="about">
+        <div class="container">
+            <div class="about__section">
+                <div class="about__img">
+                    <img src="img/about/woman.png" alt="">
+                </div>
+                <div class="about__human">
+                    <div class="about__title">Put the human back in HR.</div>
+                    <div class="about__text">Your employees are the real stars. Show the love and help them perform!</div>
+                </div>
+                <div class="about__parts">
+                    <div class="about__title">You don’t have to play all the parts.</div>
+                    <div class="about__text">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</div>
+                </div>
+                <div class="about__pic">
+                    <img src="img/about/men.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="partners">
+        <div class="container">
+            <div class="partners__section">
+                <div class="partners__title">We partner with the best</div>
+                <div class="partners__companies">
+                    <div class="partners__pic">
+                        <img src="img/partners/stripe.svg" alt="">
+                    </div>
+                    <div class="partners__pic">
+                        <img src="img/partners/google.svg" alt="">
+                    </div>
+                    <div class="partners__pic">
+                        <img src="img/partners/notion.svg" alt="">
+                    </div>
+                    <div class="partners__pic">
+                        <img src="img/partners/gusto.svg" alt="">
+                    </div>
+                    <div class="partners__pic">
+                        <img src="img/partners/aircall.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quality">
+        <div class="container">
+            <div class="quality__section">
+                <div class="quality__title">HR Production of the Highest Quality</div>
+                <div class="quality__about">
+                    <div class="quality__card">
+                        <img src="img/quality/1.png" alt="">
+                        <div class="quality__text">Educates & Informs</div>
+                        <div class="quality__text">Employee Expectations</div>
+                    </div>
+                    <div class="quality__card">
+                        <img src="img/quality/2.png" alt="">
+                        <div class="quality__text">Protects Your Business</div>
+                        <div class="quality__text">Just in Case</div>
+                    </div>
+                    <div class="quality__card">
+                        <img src="img/quality/3.png" alt="">
+                        <div class="quality__text">Manages & Stores</div>
+                        <div class="quality__text">Important Documents</div>
+                    </div>
+                    <div class="quality__card">
+                        <img src="img/quality/4.png" alt="">
+                        <div class="quality__text">Create a Healthy</div>
+                        <div class="quality__text">Work Environment</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="interests">
+        <div class="container">
+            <div class="interests__section">
+                <div class="interests__title">Consider everyone's best interest</div>
+                <div class="interests__subtitle">HR is for everyone. Clerksy can help you.</div>
+                <div class="interests__about">
+                    <div class="interests__card">
+                        <img src="img/intersts/protect.svg" alt="">
+                        <div class="interests__flag">Protect Your Company</div>
+                        <ul class="interests__list">
+                            <li class="interests__item">Compliance Audits & Training</li>
+                            <li class="interests__item">Employee Data Storage</li>
+                            <li class="interests__item">Policy Drafting</li>
+                        </ul>
+                    </div>
+                    <div class="interests__card">
+                        <img src="img/intersts/star.svg" alt="">
+                        <div class="interests__flag">Set Your Employees Up For Success</div>
+                        <ul class="interests__list">
+                            <li class="interests__item">Learning & Development</li>
+                            <li class="interests__item">Employee Relations</li>
+                            <li class="interests__item">Benefit Management</li>
+                            <li class="interests__item">Employee Performance</li>
+                        </ul>
+                    </div>
+                    <div class="interests__card">
+                        <img src="img/intersts/search.svg" alt="">
+                        <div class="interests__flag">Know Your Industry's Legal Landscape</div>
+                        <ul class="interests__list">
+                            <li class="interests__item">Work Place Investigations</li>
+                            <li class="interests__item">Employee Mediations</li>
+                            <li class="interests__item">Performance Tracking</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
