added: get-started secrion

--- a/index.html
+++ b/index.html
@@ -146,5 +146,67 @@
             </div>
         </div>
     </div>
+    <div class="feedback">
+        <div class="container">
+            <div class="feedback__title">It's easy as 1, 2, 3</div>
+            <div class="feedback__subtitle">Clerksy can help use your unique business needs. Here's how:</div>
+            <div class="feedback__about">
+                <div class="feedback__item">
+                    <div class="feedback__text">Fill out a form and tell us what you're looking for:</div>
+                    <div class="feedback__flag">5 minutes</div>
+                </div>
+                <div class="feedback__pic">
+                    <img src="img/feedback/arrow.svg" alt="">
+                </div>
+                <div class="feedback__item">
+                    <div class="feedback__text">Time it will take a Clerksy rep to follow up:</div>
+                    <div class="feedback__flag">24 hours</div>
+                </div>
+                <div class="feedback__img">
+                    <img src="img/feedback/arrow-1.svg" alt="">
+                </div>
+                <div class="feedback__item">
+                    <div class="feedback__circle">
+                        <img src="img/feedback/circlee.png" alt="">
+                    </div>
+                    <div class="feedback__text">Take advantage of our monthly plans starting at:</div>
+                    <div class="feedback__flag">$699 USD</div>
+                </div>
+            </div>
+            <div class="feedback__call">
+                <button class="feedback__button button">Book Free Discovery Call</button>
+            </div>
+        </div>
+    </div>
+    <div class="get-started">
+        <div class="get-started__section">
+            <div class="get-started__title">Get Started With Clerksy</div>
+            <div class="get-started__subtitle">Make sure your business puts people first.</div>
+            <button class="get-started__button button">Book a Free Discovery Call</button>
+            <div class="get-started__left">
+                <img src="img/get-started/left.png" alt="">
+            </div>
+            <div class="get-started__right">
+                <img src="img/get-started/right.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="subscribe">
+        <div class="container">
+            <div class="subscribe__section">
+                <div class="subscribe__text">
+                    <div class="subscribe__title">Stay up to date!</div>
+                    <div class="subscribe__subtitle">Sign up for the latest Clerksy news.</div>
+                </div>
+                <div class="subscribe__email">
+                    <form action="#" name="email" class="form subscribe__form">
+                        <input class="subscribe__input" type="text">
+                        <buttton class="button subscribe__button">Sign Up</buttton>
+                    </form>
+                    <div class="subscribe__privacy">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#" class="subscribe__privacy-link">Privacy Policy</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
