added: subscribe section

--- a/index.html
+++ b/index.html
@@ -203,10 +203,35 @@
                         <input class="subscribe__input" type="text">
                         <buttton class="button subscribe__button">Sign Up</buttton>
                     </form>
-                    <div class="subscribe__privacy">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#" class="subscribe__privacy-link">Privacy Policy</a></div>
+                    <div class="subscribe__privacy">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#" class="subscribe__privacy-link">Privacy Policy</a>.
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__section">
+                <div class="footer__logo">
+                    <img src="img/footer/logo.svg" alt="">
+                </div>
+                <div class="footer__title">A people company.</div>
+                <div class="footer__more">
+                    <a href="" class="footer__link">
+                        <img src="" alt="">
+                    </a>
+                    <a href="" class="footer__link">
+                        <img src="" alt="">
+                    </a>
+                    <a href="" class="footer__link">
+                        <img src="" alt="">
+                    </a>
+                    <a href="" class="footer__link">
+                        <img src="" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
