added: footer section

--- a/index.html
+++ b/index.html
@@ -218,17 +218,27 @@
                 <div class="footer__title">A people company.</div>
                 <div class="footer__more">
                     <a href="" class="footer__link">
-                        <img src="" alt="">
+                        <img src="img/footer/facebook.svg" alt="">
                     </a>
                     <a href="" class="footer__link">
-                        <img src="" alt="">
+                        <img src="img/footer/twitter.svg" alt="">
                     </a>
                     <a href="" class="footer__link">
-                        <img src="" alt="">
+                        <img src="img/footer/in.svg" alt="">
                     </a>
                     <a href="" class="footer__link">
-                        <img src="" alt="">
+                        <img src="img/footer/instagram.svg" alt="">
                     </a>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <div class="footer__2020">© 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</div>
+                <div class="footer__links">
+                    <a href="#" class="footer__item">Privacy Policy</a>
+                    <a href="#" class="footer__item">Terms of Service</a>
+                    <a href="#" class="footer__item">GDPR</a>
+                    <a href="#" class="footer__item">Careers</a>
+                    <a href="#" class="footer__item">Press Kit</a>
                 </div>
             </div>
         </div>
