--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="about__section">
                 <div class="about__img">
-                    <img src="img/about/woman.png" alt="">
+                    <img src="img/about/woman.png" alt="" class="about__img">
                 </div>
                 <div class="about__human">
                     <div class="about__title">Put the human back in HR.</div>
@@ -50,7 +50,7 @@
                     <div class="about__text">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</div>
                 </div>
                 <div class="about__pic">
-                    <img src="img/about/men.png" alt="">
+                    <img src="img/about/men.png" alt="" class="about__pic">
                 </div>
             </div>
         </div>
@@ -156,18 +156,18 @@
                     <div class="feedback__flag">5 minutes</div>
                 </div>
                 <div class="feedback__pic">
-                    <img src="img/feedback/arrow.svg" alt="">
+                    <img src="img/feedback/arrow.svg" alt="" class="feedback__pic">
                 </div>
                 <div class="feedback__item">
                     <div class="feedback__text">Time it will take a Clerksy rep to follow up:</div>
                     <div class="feedback__flag">24 hours</div>
                 </div>
                 <div class="feedback__img">
-                    <img src="img/feedback/arrow-1.svg" alt="">
+                    <img src="img/feedback/arrow-1.svg" alt="" class="feedback__img">
                 </div>
                 <div class="feedback__item">
                     <div class="feedback__circle">
-                        <img src="img/feedback/circlee.png" alt="">
+                        <img src="img/feedback/circlee.png" alt="" class="feedback__circle">
                     </div>
                     <div class="feedback__text">Take advantage of our monthly plans starting at:</div>
                     <div class="feedback__flag">$699 USD</div>
