--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <title>Clersky</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header header--fixed">
         <div class="container">
             <div class="header__section">
                 <div class="header__logo">
                     <img src="img/header/logo.svg" alt="">
-                </div>
+                </div> 
                 <div class="header__login">
                     <a href="" class="header__sign-in">Log In</a>
                     <a class="header__phone" href="tel:8443326440">844-332-6440</a>
                     <button class="header__button button">Get Started</button>
                 </div>
+                <button class="navbar-button navbar-button__menu">
+                    <span class="navbar-button__line"></span>
+                    <span class="navbar-button__line"></span>
+                    <span class="navbar-button__line"></span>
+                  </button>
             </div>
         </div>
     </header>
@@ -38,18 +43,18 @@
     <div class="about">
         <div class="container">
             <div class="about__section">
-                <div class="about__img">
+                <div class="about__img about__col1">
                     <img src="img/about/woman.png" alt="" class="about__img">
                 </div>
-                <div class="about__human">
+                <div class="about__human about__col2">
                     <div class="about__title">Put the human back in HR.</div>
                     <div class="about__text">Your employees are the real stars. Show the love and help them perform!</div>
                 </div>
-                <div class="about__parts">
+                <div class="about__parts about__col4">
                     <div class="about__title">You don’t have to play all the parts.</div>
                     <div class="about__text">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</div>
                 </div>
-                <div class="about__pic">
+                <div class="about__pic about__col3">
                     <img src="img/about/men.png" alt="" class="about__pic">
                 </div>
             </div>
@@ -61,19 +66,19 @@
                 <div class="partners__title">We partner with the best</div>
                 <div class="partners__companies">
                     <div class="partners__pic">
-                        <img src="img/partners/stripe.svg" alt="">
+                        <img src="img/partners/stripe.svg" alt="" class="partners__pic">
                     </div>
                     <div class="partners__pic">
-                        <img src="img/partners/google.svg" alt="">
+                        <img src="img/partners/google.svg" alt="" class="partners__pic">
                     </div>
                     <div class="partners__pic">
-                        <img src="img/partners/notion.svg" alt="">
+                        <img src="img/partners/notion.svg" alt="" class="partners__pic">
                     </div>
                     <div class="partners__pic">
-                        <img src="img/partners/gusto.svg" alt="">
+                        <img src="img/partners/gusto.svg" alt="" class="partners__pic">
                     </div>
                     <div class="partners__pic">
-                        <img src="img/partners/aircall.svg" alt="">
+                        <img src="img/partners/aircall.svg" alt="" class="partners__pic">
                     </div>
                 </div>
             </div>
@@ -243,5 +248,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
