added: button for lanebt navbar menu media for 320px and more

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
                     <img src="img/header/logo.svg" alt="">
                 </div> 
                 <div class="header__login">
+                    <button class="navbar-button navbar-button__close navbar-button__hidden">
+                        <span class="navbar-button__line--close navbar-button__line"></span>
+                        <span class="navbar-button__line--close navbar-button__line"></span>
+                        <span class="navbar-button__line--close navbar-button__line"></span>
+                    </button>
                     <a href="" class="header__sign-in">Log In</a>
                     <a class="header__phone" href="tel:8443326440">844-332-6440</a>
                     <button class="header__button button">Get Started</button>
                 </div>
-                <button class="navbar-button navbar-button__menu">
-                    <span class="navbar-button__line"></span>
-                    <span class="navbar-button__line"></span>
-                    <span class="navbar-button__line"></span>
+                <button class="navbar-button__open navbar-button navbar-button__menu">
+                    <span class="navbar-button__line--open navbar-button__line"></span>
+                    <span class="navbar-button__line--open navbar-button__line"></span>
+                    <span class="navbar-button__line--open navbar-button__line"></span>
                   </button>
             </div>
         </div>
@@ -248,6 +253,7 @@
             </div>
         </div>
     </footer>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
