--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
                     <div class="subscribe__subtitle">Sign up for the latest Clerksy news.</div>
                 </div>
                 <div class="subscribe__email">
-                    <form action="#" name="email" class="form subscribe__form">
-                        <input class="subscribe__input" type="text">
-                        <buttton class="button subscribe__button">Sign Up</buttton>
+                    <form action="send.php" method="POST" class="form subscribe__form">
+                        <input class="subscribe__input" type="text" name="email">
+                        <buttton class="button subscribe__button" type="submit">Sign Up</buttton>
                     </form>
                     <div class="subscribe__privacy">By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at any time. View our full <a href="#" class="subscribe__privacy-link">Privacy Policy</a>.
                     </div>
